k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: revolution-network
  labels:
    name: revolution-network
    environment: production
